# ai-tools-usage-tracker

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  ROADMAP.md  SECURITY.md  THIRD_PARTY_NOTICES.md  pyproject.toml  requirements-build.txt
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml  provider_request.yml
.github/workflows/: ci.yml
config/: providers.json
docs/: collector-cli.md  data-verification.md  demo-capture.md  security-audit.md  threat-model.md  trademarks.md  widget-security.md
scripts/: build_app.py  build_dmg.py  security_audit.py  usage_probe.py  usage_widget.py
src/ai_usage_tracker/: __init__.py  cli.py  discovery.py  fixtures.py  manifest.py  model.py  security.py  storage.py  verification.py  widget.py  widget_settings.py
src/ai_usage_tracker/providers/: __init__.py  antigravity.py  claude.py  claude_setup.py  codex.py  cursor.py  devin.py  github_copilot.py
tests/: test_antigravity.py  test_claude.py  test_claude_setup.py  test_cli.py  test_codex.py  test_cursor.py  test_devin.py  test_discovery.py  test_github_copilot.py  test_manifest.py  test_model.py  test_platform_paths.py  test_security.py  test_storage.py  test_verification.py  test_widget.py  test_widget_settings.py
