[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-tools-usage-tracker"
version = "0.1.0"
description = "Local-first AI tool usage collector"
requires-python = ">=3.11"
dependencies = []

[project.scripts]
ai-usage-probe = "ai_usage_tracker.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

